Regression: Uv Unpacking creates diagonal pieces instead of straight ones. #109906

Closed
opened 2023-07-10 13:41:59 +02:00 by Joanna Vetulani · 9 comments

System Information
Operating system: Linux-5.15.0-76-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.105.01

Blender Version
Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: c7fc78b81ecb
Worked: 3.5 and previous
Caused by 3ea060860a

Short description of error
Unwrapping acts like packing and tries to fit the island in the texture area instead of trying to maintain orientation like before.
This is making working with texture atlases and trimsheets extremely annoying requiring my team to rotate these pieces and flatten out the edges cause they're not just rotated at a 45 degree angle or a 90 degree one as they used to sometimes be. There doesn't seem to be any option to turn this new behaviour off in the unwrapping options panel...

It's gotten to the point where people are ditching 3.6 altogether because it's hampering work, which is why we're assuming it's a bug with the amount of additional work it's created.

Steps to Reproduce

  • Open attached file
  • Call UV unwrap for select quad

UVRotation.blend

3.5 3.6
Image image
**System Information** Operating system: Linux-5.15.0-76-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.105.01 **Blender Version** Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: `c7fc78b81ecb` Worked: 3.5 and previous Caused by 3ea060860a4dd758dfeaee5c63fb4aa4a8a0b82b **Short description of error** Unwrapping acts like packing and tries to fit the island in the texture area instead of trying to maintain orientation like before. This is making working with texture atlases and trimsheets extremely annoying requiring my team to rotate these pieces and flatten out the edges cause they're not just rotated at a 45 degree angle or a 90 degree one as they used to sometimes be. There doesn't seem to be any option to turn this new behaviour off in the unwrapping options panel... It's gotten to the point where people are ditching 3.6 altogether because it's hampering work, which is why we're assuming it's a bug with the amount of additional work it's created. **Steps to Reproduce** - Open attached file - Call UV unwrap for select quad [UVRotation.blend](https://projects.blender.org/attachments/1c583617-a3d3-4a3f-86b0-5030b4b630b1) | 3.5 | 3.6 | | -------- | -------- | | ![Image](https://projects.blender.org/attachments/fdb32df4-2c9c-480c-8073-681572cd8f31) | ![image](https://projects.blender.org/attachments/ed5f9194-0eda-4793-8315-b5c36f809e0e) |
Joanna Vetulani added the
Status
Needs Triage
Type
Report
Severity
Normal
labels 2023-07-10 13:42:00 +02:00

To be clear, the expected behaviour here is that the unwrapped piece on the right, when pressing U - Unwrap, be straight in the UV space and at worst rotated at 90 degree angles instead of being diagonal like that.

To be clear, the expected behaviour here is that the unwrapped piece on the right, when pressing U - Unwrap, be straight in the UV space and at worst rotated at 90 degree angles instead of being diagonal like that.
Member

Hi, thanks for the report. Could you share .blend file and steps to redo the issue locally?
cc @Chris_Blackbourn

Hi, thanks for the report. Could you share .blend file and steps to redo the issue locally? cc @Chris_Blackbourn
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-07-11 07:32:23 +02:00

We can potentially add options to the Unwrap operator to help with this. It will probably make the most sense to bundle with #78395

In the interim, have you maybe tried "UV > Align Rotation > Auto" from the UV Editor menu?

We can potentially add options to the Unwrap operator to help with this. It will probably make the most sense to bundle with https://projects.blender.org/blender/blender/issues/78395 In the interim, have you maybe tried "UV > Align Rotation > Auto" from the UV Editor menu?
Chris Blackbourn added the
Interest
UV Editing
label 2023-07-11 12:23:52 +02:00

Hi, thanks for the report. Could you share .blend file and steps to redo the issue locally?
cc @Chris_Blackbourn

Just unwrap the selected quad. in 3.5 the quad unwraps straight (ideally it would maintain it's orientation in 3D but 90 degree rotations are still acceptable). In 3.6 it's rotated diagonally. Sometimes the rotations are 45 degrees, on other polygons they're less predictable.

> Hi, thanks for the report. Could you share .blend file and steps to redo the issue locally? > cc @Chris_Blackbourn Just unwrap the selected quad. in 3.5 the quad unwraps straight (ideally it would maintain it's orientation in 3D but 90 degree rotations are still acceptable). In 3.6 it's rotated diagonally. Sometimes the rotations are 45 degrees, on other polygons they're less predictable.

We can potentially add options to the Unwrap operator to help with this. It will probably make the most sense to bundle with #78395

In the interim, have you maybe tried "UV > Align Rotation > Auto" from the UV Editor menu?

Hey, yeah that does the job! It'd be great to be able to set that behaviour as default in the unwrap settings.

> We can potentially add options to the Unwrap operator to help with this. It will probably make the most sense to bundle with https://projects.blender.org/blender/blender/issues/78395 > > In the interim, have you maybe tried "UV > Align Rotation > Auto" from the UV Editor menu? Hey, yeah that does the job! It'd be great to be able to set that behaviour as default in the unwrap settings.
Member

Just unwrap the selected quad. in 3.5 the quad unwraps straight (ideally it would maintain it's orientation in 3D but 90 degree rotations are still acceptable). In 3.6 it's rotated diagonally. Sometimes the rotations are 45 degrees, on other polygons they're less predictable.

Yes, can confirm (missed the notification somehow)

> Just unwrap the selected quad. in 3.5 the quad unwraps straight (ideally it would maintain it's orientation in 3D but 90 degree rotations are still acceptable). In 3.6 it's rotated diagonally. Sometimes the rotations are 45 degrees, on other polygons they're less predictable. Yes, can confirm (missed the notification somehow)
Pratik Borhade changed title from Uv Unpacking creates diagonal pieces instead of straight ones. to Regression: Uv Unpacking creates diagonal pieces instead of straight ones. 2023-08-03 10:50:32 +02:00
Member

Caused by 3ea060860a

Caused by 3ea060860a4dd758dfeaee5c63fb4aa4a8a0b82b
Pratik Borhade added this to the 3.6 LTS milestone 2023-08-04 07:45:27 +02:00

In the general case, rotations like this can help make packing a lot more efficient. So I think an option to control rotation would make sense.

For this particular case, we could just never rotate (or only 90°) when packing single islands. Once you add two or more islands it's not likely to pack things diagonally anymore. It's still possible, but perhaps means that users would not have to manually set a rotation option often.

In the general case, rotations like this can help make packing a lot more efficient. So I think an option to control rotation would make sense. For this particular case, we could just never rotate (or only 90°) when packing single islands. Once you add two or more islands it's not likely to pack things diagonally anymore. It's still possible, but perhaps means that users would not have to manually set a rotation option often.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-14 19:05:13 +02:00

In the general case, rotations like this can help make packing a lot more efficient. So I think an option to control rotation would make sense.

For this particular case, we could just never rotate (or only 90°) when packing single islands. Once you add two or more islands it's not likely to pack things diagonally anymore. It's still possible, but perhaps means that users would not have to manually set a rotation option often.

Another thing to consider is that rotating islands and maximising space when packing is not always as beneficial for baking as people think. It promotes diagonal lines where straight ones would be instead and pixelates straight lines often requiring much higher resolution bakes, in fact it's pretty unwanted in lightmap packing. And for games textures get scaled down or mip-mapped and you want straight lines to bake as straight to minimise pixelation.

> In the general case, rotations like this can help make packing a lot more efficient. So I think an option to control rotation would make sense. > > For this particular case, we could just never rotate (or only 90°) when packing single islands. Once you add two or more islands it's not likely to pack things diagonally anymore. It's still possible, but perhaps means that users would not have to manually set a rotation option often. Another thing to consider is that rotating islands and maximising space when packing is not always as beneficial for baking as people think. It promotes diagonal lines where straight ones would be instead and pixelates straight lines often requiring much higher resolution bakes, in fact it's pretty unwanted in lightmap packing. And for games textures get scaled down or mip-mapped and you want straight lines to bake as straight to minimise pixelation.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109906
No description provided.